--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,39 @@
-pytorch-transformers==1.0.0
+beautifulsoup4==4.9.3
+boto3==1.16.9
+botocore==1.19.9
+certifi==2020.6.20
+chardet==3.0.4
+ChatterBot==1.0.8
+click==7.1.2
+dataclasses==0.7
 Flask==1.1.1
 Flask-Cors==3.0.8
+future==0.18.2
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jmespath==0.10.0
+lxml==4.6.1
+MarkupSafe==1.1.1
+mathparse==0.1.2
+numpy==1.19.3
+pkg-resources==0.0.0
+PyJWT==1.7.1
+python-dateutil==2.8.1
+pytorch-transformers==1.0.0
+pytz==2020.4
+regex==2020.10.28
+requests==2.24.0
+s3transfer==0.3.3
+sentencepiece==0.1.94
+six==1.15.0
+soupsieve==2.0.1
+SQLAlchemy==1.3.20
+torch==1.5.1
+tqdm==4.51.0
+twilio==6.46.0
+typing-extensions==3.7.4.3
+urllib3==1.25.11
+Werkzeug==1.0.1
+wikipedia==1.4.0
